feat: add visualisation and change converter visuals

--- a/converter_html/converter.html
+++ b/converter_html/converter.html
@@ -16,13 +16,13 @@
         <div class="section-title">Source Unit</div>
         <div class="input-row">
           <div class="input-group">
-            <label for="ucum-code">UCUM Code</label>
+            <label for="ucum-code">Unit Code</label>
             <input
               type="text"
               id="ucum-code"
-              placeholder="e.g., kg.m-2, m/s, Cel, F"
+              placeholder="e.g., kg, m/s, degC, m-2, N m"
               spellcheck="false"
-              title="Enter a unit code in UCUM notation. Examples: kg, m/s, degC, m-2"
+              title="Enter a unit code in UCUM or similar notation. Examples: kg, m/s, degC, m-2, N m"
             />
           </div>
           <div class="input-group">
