fix: update header title for clarity in converter.html

--- a/converter_html/converter.html
+++ b/converter_html/converter.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>🔬 UCUM Unit Converter</h1>
+      <h1>OpenBIS UCUM Unit Converter</h1>
       <p class="subtitle">Convert between compatible units using UCUM codes</p>
 
       <!-- Input Unit Section -->
