feat: add info box for storage unit and enhance keyboard navigation

--- a/converter_html/openbis_demo.html
+++ b/converter_html/openbis_demo.html
@@ -10,14 +10,25 @@
   <body>
     <div class="container">
       <h1>🔬 OpenBIS Quantity Widget Demo</h1>
-      <p class="subtitle">Input values with unit conversion for OpenBIS integration</p>
+      <p class="subtitle">
+        Input values with unit conversion for OpenBIS integration
+      </p>
 
       <!-- Editable Input Section -->
       <div class="section" id="input-section">
         <div class="section-title">Input Value</div>
+        <div class="info-box">
+          <strong>Storage Unit:</strong>
+          <span id="storage-unit-display">kg</span>
+          <span class="info-hint"
+            >— Values will be converted to this unit when saved</span
+          >
+        </div>
         <div class="input-row">
           <div class="input-group">
-            <label for="input-value" id="input-label">Value (<span id="source-unit-display">kg</span>)</label>
+            <label for="input-value" id="input-label"
+              >Value (<span id="source-unit-display">kg</span>)</label
+            >
             <input
               type="number"
               id="input-value"
@@ -54,13 +65,13 @@
       </div>
 
       <!-- Saved Values Section -->
-      <div class="section" id="saved-section" style="display: none;">
+      <div class="section" id="saved-section" style="display: none">
         <div class="section-title">Saved Values</div>
         <div id="saved-values-container"></div>
       </div>
 
       <!-- Hidden field for source unit configuration -->
-      <input type="hidden" id="source-unit-config" value="kg" />
+      <input type="hidden" id="source-unit-config" value="m" />
     </div>
 
     <script src="openbis_demo.js"></script>
